--- a/app_dashboard/index.html
+++ b/app_dashboard/index.html
@@ -61,11 +61,11 @@
 							<div class="form-group row">
 								<label class="col-sm-9 col-form-label">Competência:</label>
 								<div class="col-sm-3">
-									<select class="form-control-plaintext">
-										<option value="">-- Selecione </option>
-										<option value="2018-08">Agosto / 2018</option>
-										<option value="2018-09">Setembro / 2018</option>
-										<option value="2018-10">Outubro / 2018</option>
+									<select class="form-control-plaintext" id="compentencia">
+										<option value="" class="text-center"> --Selecione-- </option>
+										<option value="2018-08" class="text-center">Agosto / 2018</option>
+										<option value="2018-09" class="text-center">Setembro / 2018</option>
+										<option value="2018-10" class="text-center">Outubro / 2018</option>
 									</select>
 								</div>
 							</div>
