--- a/app_dashboard/index.html
+++ b/app_dashboard/index.html
@@ -14,7 +14,7 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-		<script src="script.js"></script>
+		<script defer src="script.js"></script>
 		
 	</head>
 
@@ -25,11 +25,11 @@
 		    <div class="brand">SEU LOGO AQUI</div>
 		    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
 		  
-		        <div class="menu-list">
+		    <div class="menu-list">
 		  
 		            <ul id="menu-content" class="menu-content collapse out">
 		                <li>
-		                  <a href="#"><i class="fa fa-tachometer-alt sidebar-icon"></i> Dashboard</a>
+		                  <a href="./index.html" id="dashboard"><i class="fa fa-tachometer-alt sidebar-icon"></i> Dashboard</a>
 		                </li>
 
 						<li>
@@ -47,7 +47,7 @@
 		                    <li><a href="#" id="suporte"> <i class="fa fa-angle-right"></i> Suporte <small><i class="fa fa-external-link"></i></small></a></li>
 		                </ul>
 		            </ul>
-		     </div>
+		    </div>
 		</div>
 
 		<!-- paginas -->
@@ -81,7 +81,7 @@
 								Número de vendas
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="numeroVendas">?</h5>
 							</div>
 						</div>
 					</div>
@@ -92,7 +92,7 @@
 								Total de vendas
 							</div>
 							<div class="card-body">
-								 <h5 class="card-title">?</h5>
+								 <h5 class="card-title" id="totalVendas">?</h5>
 							</div>
 						</div>
 		    		</div>
@@ -171,9 +171,6 @@
 					</div>
 		    	</div>
 		    </div>
-
 		</div>
-
 	</body>
-
 </html>
