updated finalizado o modulo dashboard

--- a/app_dashboard/index.html
+++ b/app_dashboard/index.html
@@ -33,6 +33,10 @@
 		                </li>
 
 						<li>
+							<a href="#" id="cadastro2"><i class="fa fa-tachometer-alt sidebar-icon"></i> Cadastro 2</a>
+						  </li>
+
+						<li>
 							<a href="#" id="cadastro">
 								<i class="fa-regular fa-user"></i>
 								Cadastro
